--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                           <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
                           <div class="card-actions justify-end">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button id="triangle-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
                         </div>
                       </div>
