create a function for get input value

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                           <h2 class=" font-semibold text-2xl">Triangle</h2>
                           <p>Area (A) = 0.5 X b X h</p>
 
-                          <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="triangle-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input id="triangle-input-h" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
                           <div class="card-actions justify-end">
                             <button id="triangle-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
