create a function for make table row and show data

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/triangle.png" alt="Shoes" /></figure>
                         <div class="card-body  text-center">
-                          <h2 class=" font-semibold text-2xl">Triangle</h2>
+                          <h2 id="triangle" class=" font-semibold text-2xl">Triangle</h2>
                           <p>Area (A) = 0.5 X b X h</p>
 
                           <p> <input id="triangle-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input id="triangle-input-h" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
                           <div class="card-actions justify-end">
-                            <button id="triangle-btn" class="btn btn-primary w-full">Calculate</button>
+                            <button id="triangle-btn" class="btn btn-primary w-full ">Calculate</button>
                           </div>
                         </div>
                       </div>
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/rectangle.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
-                          <h2 class="font-semibold text-2xl">Rectangle</h2>
+                          <h2 id="" class="font-semibold text-2xl">Rectangle</h2>
                           <p>Area (A) =  W X I</p>
 
                           <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
@@ -107,7 +107,7 @@
 
                     <div class="overflow-x-auto">
                         <table class="table w-full">
-                          <tbody>
+                          <tbody id="table-body">
                             <!-- row 1 -->
                             <tr>
                               <th>1</th>
