calculate rectangle  and show result on table

--- a/index.html
+++ b/index.html
@@ -45,12 +45,14 @@
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/rectangle.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
-                          <h2 id="" class="font-semibold text-2xl">Rectangle</h2>
+                          <h2 id="rectangle" class="font-semibold text-2xl">Rectangle</h2>
                           <p>Area (A) =  W X I</p>
 
-                          <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> 
+                            <input id="rectangle-input-w" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
+                            <input id="rectangle-input-i" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
                           <div class="card-actions justify-end">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button id="rectangle-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
                         </div>
                       </div>
