--- a/index.html
+++ b/index.html
@@ -59,47 +59,51 @@
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/parallelogram.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
-                          <h2 class="font-semibold text-2xl">Parallelogram</h2>
+                          <h2 id="parallelogram" class="font-semibold text-2xl">Parallelogram</h2>
                           <p>Area (A) =  b    X   h</p>
 
-                          <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="parallelogram-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
+                            <input id="parallelogram-input-h" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
                           <div class="card-actions justify-end">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button id="parallelogram-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
                         </div>
                       </div>
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/rhombus.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
-                          <h2 class="font-semibold text-2xl">Rhombus</h2>
+                          <h2 id="rhombus" class="font-semibold text-2xl">Rhombus</h2>
                           <p>Area (A) = 0.5 X D1 X D2</p>
-                          <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="rhombus-input-d1" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
+                            <input id="rhombus-input-d2" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
                           <div class="card-actions justify-end">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button  id="rhombus-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
                         </div>
                       </div>
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/pentagon.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
-                          <h2 class="font-semibold text-2xl">Pentagon</h2>
+                          <h2 id="pentagon" class="font-semibold text-2xl">Pentagon</h2>
                           <p>Area (A) = 0.5 X p X b</p>
 
-                          <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="pentagon-input-p" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
+                            <input id="pentagon-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
                           <div class="card-actions justify-end">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button id="pentagon-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
                         </div>
                       </div>
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/ellipse.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
-                          <h2 class="font-semibold text-2xl">Ellipse</h2>
+                          <h2 id="ellipse" class="font-semibold text-2xl">Ellipse</h2>
                           <p>Area (A) =πab</p>
 
-                          <p> <input class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input class="bg-slate-200 p-2 rounded-lg w-16 my-2 " type="text"> CM</p>
+                          <p> <input id="ellipse-inputA" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
+                            <input id="ellipse-inputB" class="bg-slate-200 p-2 rounded-lg w-16 my-2 " type="text"> CM</p>
                           <div class="card-actions justify-end">
-                            <button class="btn btn-primary w-full">Calculate</button>
+                            <button id="ellipse-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
                         </div>
                       </div>
