fixed some responsive issue

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <style>
+        .table :where(th,td){
+            padding: 5px !important;
+        }
+    </style>
 </head>
 <body>
     
@@ -108,8 +113,8 @@
                         </div>
                       </div>
                 </div>
-                <div class="md:w-[28%]">
-                    <h2 class="text-2xl underline font-semibold text-center">Area Calculation</h2>
+                <div class="md:w-[30%]">
+                    <h2 class="text-2xl underline font-semibold text-center mb-8">Area Calculation</h2>
 
                     <div class="overflow-x-auto">
                         <table class="table w-full">
