put html comment and create blog file

--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
             </div>
           </div>
     </header>
+<!-- Header part End -->
 
     <main>
         <section>
             <div class="p-4 md:flex gap-2">
+
+                <!-- card part start here  -->
+
                 <div class="grid md:grid-cols-3 gap-4 md:w-[70%]">
+
+                    <!-- ================= Triangle card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/triangle.png" alt="Shoes" /></figure>
                         <div class="card-body  text-center">
@@ -47,6 +53,8 @@
                           </div>
                         </div>
                       </div>
+
+                       <!-- ================= Rectangle card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/rectangle.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
@@ -61,6 +69,8 @@
                           </div>
                         </div>
                       </div>
+
+                      <!-- ================= Parallelogram card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/parallelogram.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
@@ -74,6 +84,8 @@
                           </div>
                         </div>
                       </div>
+
+                      <!-- ================= Rhombus card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/rhombus.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
@@ -86,6 +98,8 @@
                           </div>
                         </div>
                       </div>
+
+                      <!-- ================= Pentagon card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/pentagon.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
@@ -99,6 +113,8 @@
                           </div>
                         </div>
                       </div>
+
+                      <!-- ================= Ellipse card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
                         <figure><img src="images/ellipse.png" alt="Shoes" /></figure>
                         <div class="card-body text-center">
@@ -113,6 +129,9 @@
                         </div>
                       </div>
                 </div>
+                <!-- card part end  -->
+
+                <!-- table part start here -->
                 <div class="md:w-[30%]">
                     <h2 class="text-2xl underline font-semibold text-center mb-8">Area Calculation</h2>
 
@@ -125,6 +144,7 @@
                         </table>
                       </div>
                 </div>
+                <!-- table part End -->
             </div>
         </section>
     </main>
