--- a/blog.html
+++ b/blog.html
@@ -26,5 +26,25 @@
     </header>
 <!-- Header part End -->
 
+<main>
+  <section>
+    <div class="p-11 shadow-xl m-8">
+      <h2 class="text-4xl font-semibold pb-5">What is DOM and what is the purpose of DOM?</h2>
+      <p class="text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat doloribus et, dolorum rerum voluptatum aliquam distinctio impedit! Cum iusto quisquam laborum numquam maxime, error voluptate eligendi atque, enim, similique esse.</p>
+    </div>
+    <div class="p-11 shadow-xl m-8">
+      <h2 class="text-4xl font-semibold pb-5">How will you select HTML elements using DOM? Name the DOM methods.</h2>
+      <p class="text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat doloribus et, dolorum rerum voluptatum aliquam distinctio impedit! Cum iusto quisquam laborum numquam maxime, error voluptate eligendi atque, enim, similique esse.</p>
+    </div>
+    <div class="p-11 shadow-xl m-8">
+      <h2 class="text-4xl font-semibold pb-5">What is event bubble?</h2>
+      <p class="text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat doloribus et, dolorum rerum voluptatum aliquam distinctio impedit! Cum iusto quisquam laborum numquam maxime, error voluptate eligendi atque, enim, similique esse.</p>
+    </div>
+    <div class="p-11 shadow-xl m-8">
+      <h2 class="text-4xl font-semibold pb-5">What is a callback function and why will you use it?</h2>
+      <p class="text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat doloribus et, dolorum rerum voluptatum aliquam distinctio impedit! Cum iusto quisquam laborum numquam maxime, error voluptate eligendi atque, enim, similique esse.</p>
+    </div>
+  </section>
+</main>
 </body>
 </html>
