added placeholder on the input

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="flex-none">
               <ul class="menu menu-horizontal px-1">
-                <li><button class="btn btn-primary text-white">Blog</button></li>
+                <li><a href="blog.html" target="_blank" class="btn btn-primary text-white">Blog</a></li>
               </ul>
             </div>
           </div>
@@ -47,7 +47,7 @@
                           <h2 id="triangle" class=" font-semibold text-2xl">Triangle</h2>
                           <p>Area (A) = 0.5 X b X h</p>
 
-                          <p> <input id="triangle-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM <input id="triangle-input-h" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="triangle-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="b"> CM <input id="triangle-input-h" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="h"> CM</p>
                           <div class="card-actions justify-end">
                             <button id="triangle-btn" class="btn btn-primary w-full ">Calculate</button>
                           </div>
@@ -62,8 +62,8 @@
                           <p>Area (A) =  W X I</p>
 
                           <p> 
-                            <input id="rectangle-input-w" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
-                            <input id="rectangle-input-i" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                            <input id="rectangle-input-w" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="W"> CM 
+                            <input id="rectangle-input-i" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="I"> CM</p>
                           <div class="card-actions justify-end">
                             <button id="rectangle-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
@@ -77,8 +77,8 @@
                           <h2 id="parallelogram" class="font-semibold text-2xl">Parallelogram</h2>
                           <p>Area (A) =  b    X   h</p>
 
-                          <p> <input id="parallelogram-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
-                            <input id="parallelogram-input-h" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="parallelogram-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="B"> CM 
+                            <input id="parallelogram-input-h" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="H"> CM</p>
                           <div class="card-actions justify-end">
                             <button id="parallelogram-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
@@ -91,8 +91,8 @@
                         <div class="card-body text-center">
                           <h2 id="rhombus" class="font-semibold text-2xl">Rhombus</h2>
                           <p>Area (A) = 0.5 X D1 X D2</p>
-                          <p> <input id="rhombus-input-d1" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
-                            <input id="rhombus-input-d2" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="rhombus-input-d1" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="d1"> CM 
+                            <input id="rhombus-input-d2" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="d2"> CM</p>
                           <div class="card-actions justify-end">
                             <button  id="rhombus-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
@@ -106,8 +106,8 @@
                           <h2 id="pentagon" class="font-semibold text-2xl">Pentagon</h2>
                           <p>Area (A) = 0.5 X p X b</p>
 
-                          <p> <input id="pentagon-input-p" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
-                            <input id="pentagon-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM</p>
+                          <p> <input id="pentagon-input-p" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="A"> CM 
+                            <input id="pentagon-input-b" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="B"> CM</p>
                           <div class="card-actions justify-end">
                             <button id="pentagon-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
@@ -121,8 +121,8 @@
                           <h2 id="ellipse" class="font-semibold text-2xl">Ellipse</h2>
                           <p>Area (A) =πab</p>
 
-                          <p> <input id="ellipse-inputA" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text"> CM 
-                            <input id="ellipse-inputB" class="bg-slate-200 p-2 rounded-lg w-16 my-2 " type="text"> CM</p>
+                          <p> <input id="ellipse-inputA" class="bg-slate-200 p-2 rounded-lg w-16 my-2" type="text" placeholder="a"> CM 
+                            <input id="ellipse-inputB" class="bg-slate-200 p-2 rounded-lg w-16 my-2 " type="text" placeholder="b"> CM</p>
                           <div class="card-actions justify-end">
                             <button id="ellipse-btn" class="btn btn-primary w-full">Calculate</button>
                           </div>
