--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
   <section>
     <div class="p-11 shadow-xl m-8">
       <h2 class="text-4xl font-semibold pb-5">What is DOM and what is the purpose of DOM?</h2>
-      <p class="text-lg"> DOM full meaning (document object model) .  the DOM makes website dynamically and attractive  , inturputed, we can update content dynamically  </p>
+      <p class="text-lg"> DOM Is (document object model).It is a programming interface for web documents, its can change the document structure, style, and content.  The purpose of DOM its makes website dynamically and attractive  , inturputed, we can update content dynamically  </p>
     </div>
     <div class="p-11 shadow-xl m-8">
       <h2 class="text-4xl font-semibold pb-5">How will you select HTML elements using DOM? Name the DOM methods.</h2>
