fixed some image issue

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                     <!-- ================= Triangle card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
-                        <figure><img src="images/triangle.png" alt="Shoes" /></figure>
+                       <img src="images/triangle.png" alt="Shoes" />
                         <div class="card-body  text-center">
                           <h2 id="triangle" class=" font-semibold text-2xl">Triangle</h2>
                           <p>Area (A) = 0.5 X b X h</p>
@@ -56,7 +56,7 @@
 
                        <!-- ================= Rectangle card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
-                        <figure><img src="images/rectangle.png" alt="Shoes" /></figure>
+                       <img src="images/rectangle.png" alt="Shoes" />
                         <div class="card-body text-center">
                           <h2 id="rectangle" class="font-semibold text-2xl">Rectangle</h2>
                           <p>Area (A) =  W X I</p>
@@ -72,7 +72,7 @@
 
                       <!-- ================= Parallelogram card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
-                        <figure><img src="images/parallelogram.png" alt="Shoes" /></figure>
+                       <img src="images/parallelogram.png" alt="Shoes" />
                         <div class="card-body text-center">
                           <h2 id="parallelogram" class="font-semibold text-2xl">Parallelogram</h2>
                           <p>Area (A) =  b    X   h</p>
@@ -87,7 +87,7 @@
 
                       <!-- ================= Rhombus card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
-                        <figure><img src="images/rhombus.png" alt="Shoes" /></figure>
+                       <img src="images/rhombus.png" alt="Shoes" />
                         <div class="card-body text-center">
                           <h2 id="rhombus" class="font-semibold text-2xl">Rhombus</h2>
                           <p>Area (A) = 0.5 X D1 X D2</p>
@@ -101,7 +101,7 @@
 
                       <!-- ================= Pentagon card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
-                        <figure><img src="images/pentagon.png" alt="Shoes" /></figure>
+                       <img src="images/pentagon.png" alt="Shoes" />
                         <div class="card-body text-center">
                           <h2 id="pentagon" class="font-semibold text-2xl">Pentagon</h2>
                           <p>Area (A) = 0.5 X p X b</p>
@@ -116,7 +116,7 @@
 
                       <!-- ================= Ellipse card ====================-->
                     <div class="card w-full bg-base-100 border p-4 ">
-                        <figure><img src="images/ellipse.png" alt="Shoes" /></figure>
+                       <img src="images/ellipse.png" alt="Shoes" />
                         <div class="card-body text-center">
                           <h2 id="ellipse" class="font-semibold text-2xl">Ellipse</h2>
                           <p>Area (A) =πab</p>
